Added google analytics tracking to the site.

--- a/web/www/index.html
+++ b/web/www/index.html
@@ -9,6 +9,7 @@
 <link rel="stylesheet" href="css/style.css" type="text/css" />
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+<script src="js/gAnalytics.js"></script>
 
 <script>
 $(function(){
