Fleshing out page

--- a/web/www/dog-safety/index.html
+++ b/web/www/dog-safety/index.html
@@ -21,70 +21,72 @@
 </head>
 
 <body>
+	<div class="navbar navbar-inverse navbar-fixed-top">
+		<div class="navbar-inner">
+			<div class="container">
+				<button type="button" class="btn btn-navbar" data-toggle="collapse"
+					data-target=".nav-collapse">
+					<span class="icon-bar"></span> <span class="icon-bar"></span> <span
+						class="icon-bar"></span>
+				</button>
+				<a class="brand" href="index.html">Signals Labs</a>
+				<div class="nav-collapse collapse">
+					<ul class="nav">
+						<li class="active"><a href="features.html">Smoke Signals</a></li>
+						<li><a href="features.html">Features</a></li>
+						<li><a href="about.html">About</a></li>
+						<li><a href="contact.html">Contact</a></li>
+					</ul>
+				</div>
+				<!--/.nav-collapse -->
+			</div>
+		</div>
+	</div>
 
 	<div id="wrap">
-		<div class="container">
-
-			<div class="masthead">
-				<h3 class="muted">Project name</h3>
-				<div class="navbar">
-					<div class="navbar-inner">
-						<div class="container">
-							<ul class="nav">
-								<li class="active"><a href="#">Home</a></li>
-								<li><a href="#">Projects</a></li>
-								<li><a href="#">Services</a></li>
-								<li><a href="#">Downloads</a></li>
-								<li><a href="#">About</a></li>
-								<li><a href="#">Contact</a></li>
-							</ul>
-						</div>
-					</div>
-				</div>
-				<!-- /.navbar -->
-			</div>
-
+		<div class="container" id="main">
 			<!-- Jumbotron -->
 			<div class="jumbotron">
-				<h1>Marketing stuff!</h1>
-				<p class="lead">Cras justo odio, dapibus ac facilisis in,
-					egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor
-					mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-				<a class="btn btn-large btn-success" href="#">Get started today</a>
+				<div class="row-fluid">
+					<div class="span4 text-left">
+						<h2>Smoke Signals</h2>
+						<p class="lead">Q: Is your pet safe?</p>
+						<p class="lead">A: Always!</p>
+					</div>
+					<div class="span8">
+						<div class="smoke-alarm-image"></div>
+						<a class="btn btn-large btn-success" href="#">Buy Now!</a>
+					</div>
+				</div>
 			</div>
-
-			<hr>
 
 			<!-- Example row of columns -->
 			<div class="row-fluid">
 				<div class="span4">
-					<h2>Heading</h2>
-					<p>Donec id elit non mi porta gravida at eget metus. Fusce
-						dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh,
-						ut fermentum massa justo sit amet risus. Etiam porta sem malesuada
-						magna mollis euismod. Donec sed odio dui.</p>
+					<h2>Keep your pet safe</h2>
+					<p>Get notified immediately when a fire is detected.  You're receive a push
+					notification on your smart-phone with the ability to conveniently call the 
+					fire department or your neighbor.  </p>
 					<p>
-						<a class="btn" href="#">View details &raquo;</a>
+						<a class="btn" href="features.html">View details &raquo;</a>
 					</p>
 				</div>
 				<div class="span4">
-					<h2>Heading</h2>
-					<p>Donec id elit non mi porta gravida at eget metus. Fusce
-						dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh,
-						ut fermentum massa justo sit amet risus. Etiam porta sem malesuada
-						magna mollis euismod. Donec sed odio dui.</p>
+					<h2>Know your pet is protected</h2>
+					<p>The convenient smart-phone <i>Test</i> button, allows you to 
+						test your smoke alarm without getting on a ladder to reach it.  
+						Our scheduling system allows you to schedule tests, so you always
+						know your smoke alarms work.</p>
 					<p>
-						<a class="btn" href="#">View details &raquo;</a>
+						<a class="btn" href="features.html">View details &raquo;</a>
 					</p>
 				</div>
 				<div class="span4">
-					<h2>Heading</h2>
-					<p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis
-						in, egestas eget quam. Vestibulum id ligula porta felis euismod
-						semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris
-						condimentum nibh, ut fermentum massa.</p>
+					<h2>Simplify your life</h2>
+					<p>Does your oven or shower ever cause a false alarm on your smoke 
+					alarm?  With the <i>Silence</i> button, you can quickly and easily silence false alarms.</p>
 					<p>
-						<a class="btn" href="#">View details &raquo;</a>
+						<a class="btn" href="features.html">View details &raquo;</a>
 					</p>
 				</div>
 			</div>
@@ -96,10 +98,7 @@
 
 	<div id="footer">
 		<div class="container">
-			<p class="muted credit">
-				Example courtesy <a href="http://martinbean.co.uk">Martin Bean</a>
-				and <a href="http://ryanfait.com/sticky-footer/">Ryan Fait</a>.
-			</p>
+			<p class="muted credit">Copyright 2013 Signals Labs</p>
 		</div>
 	</div>
 
